fix add modifier popover being clipped

--- a/src/entities/actor/components/character-views/components/item-group/character-view-item-group.scss
+++ b/src/entities/actor/components/character-views/components/item-group/character-view-item-group.scss
@@ -36,6 +36,7 @@ sl-dropzone {
 
 sl-header {
   padding: 0 0.75rem;
+  position: relative;
   &::part(heading) {
     // font-weight: normal;
     font-size: large;
